--- a/charts/myapp/templates/deployment.yaml
+++ b/charts/myapp/templates/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: {{ .Release.Name }}
   labels:
-    app: myapp
+    app: {{ .Chart.Name }}
 spec:
-  replicas: {{ .Values.relicaCount }}
-  selctor:
+  replicas: {{ .Values.replicaCount }}
+  selector:
     matchLabels:
-      app: myapp
-  templates:
+      app: {{ .Chart.Name }}
+  template:
     metadata:
       labels:
-        app: myapp
+        app: {{ .Chart.Name }}
     spec:
       containers:
-        - name: myapp
+        - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: {{ .Values.service.targetPort }}
