--- a/charts/myapp/templates/service.yaml
+++ b/charts/myapp/templates/service.yaml
@@ -1,13 +1,13 @@
-appVersion: v1
-kind: service
+apiVersion: v1
+kind: Service
 metadata:
-  name: myapp
+  name: {{ .Release.Name }}
   labels:
-    app: myapp
+    app: {{ .Chart.Name }}
 spec:
   type: {{ .Values.service.type }}
-  sekector:
-    app: myapp
+  selector:
+    app: {{ .Chart.Name }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
