--- a/charts/myapp/values.yaml
+++ b/charts/myapp/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  respository: venkatesh1409/threadedtreasures
+  repository: venkatesh1409/threadedtreasures
   tag: "0.0.1"
   pullPolicy: IfNotPresent
 
