--- a/myapp/templates/service.yaml
+++ b/myapp/templates/service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}
-  labels:
-    app: {{ .Chart.Name }}
+  labels: 
+    app: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
-  selector:
-    app: {{ .Chart.Name }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       nodePort: {{ .Values.service.nodePort }}
+  selector:
+    app: {{ .Release.Name }}
