--- a/myapp/templates/service.yaml
+++ b/myapp/templates/service.yaml
@@ -10,5 +10,6 @@ spec:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       nodePort: {{ .Values.service.nodePort }}
+      name: http
   selector:
     app: {{ .Release.Name }}
